--- a/checkout.html
+++ b/checkout.html
@@ -75,7 +75,7 @@
                     <div class="row gy-xl-3">
                         <div class="col-8 col-xl-12">
                             <div class="page-container">
-                                <div class="cart-info__list">
+                                <div class="page-container__list">
                                     <!-- item 1 -->
                                     <article class="cart-item">
                                         <a href="#!">
@@ -295,31 +295,31 @@
                                     </article>
                                 </div>
 
-                                <div class="cart-info__bottom d-md-none">
+                                <div class="page-container__bottom d-md-none">
                                     <div class="row">
                                         <div class="col-8 col-xxl-7">
-                                            <div class="cart-info__continue">
-                                                <a href="./" class="cart-info__continue-link">
+                                            <div class="page-container__continue">
+                                                <a href="./" class="page-container__continue-link">
                                                     <img
                                                         src="./assets/icons/arrow-down2.svg"
                                                         alt=""
-                                                        class="cart-info__continue-icon"
+                                                        class="page-container__continue-icon"
                                                     />
                                                     Continue Shopping
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col-4 col-xxl-5">
-                                            <div class="cart-info__row">
+                                            <div class="page-container__row">
                                                 <span>Subtotal:</span>
                                                 <span>$191.65</span>
                                             </div>
-                                            <div class="cart-info__row">
+                                            <div class="page-container__row">
                                                 <span>Shipping:</span>
                                                 <span>$10.00</span>
                                             </div>
-                                            <div class="cart-info__separate"></div>
-                                            <div class="cart-info__row cart-info__row--bold">
+                                            <div class="page-container__separate"></div>
+                                            <div class="page-container__row page-container__row--bold">
                                                 <span>Total:</span>
                                                 <span>$201.65</span>
                                             </div>
@@ -330,24 +330,24 @@
                         </div>
                         <div class="col-4 col-xl-12">
                             <div class="page-container">
-                                <div class="cart-info__row">
-                                    <span>Subtotal <span class="cart-info__sub-label">(items)</span></span>
+                                <div class="page-container__row">
+                                    <span>Subtotal <span class="page-container__sub-label">(items)</span></span>
                                     <span>3</span>
                                 </div>
-                                <div class="cart-info__row">
-                                    <span>Price<span class="cart-info__sub-label"> (Total)</span></span>
+                                <div class="page-container__row">
+                                    <span>Price<span class="page-container__sub-label"> (Total)</span></span>
                                     <span>$191.65</span>
                                 </div>
-                                <div class="cart-info__row">
+                                <div class="page-container__row">
                                     <span>Shipping</span>
                                     <span>$10.00</span>
                                 </div>
-                                <div class="cart-info__separate"></div>
-                                <div class="cart-info__row">
+                                <div class="page-container__separate"></div>
+                                <div class="page-container__row">
                                     <span>Estimated Total</span>
                                     <span>$201.65</span>
                                 </div>
-                                <a href="./shipping.html" class="btn cart-info__next-btn btn--primary btn--rounded"
+                                <a href="./shipping.html" class="btn page-container__next-btn btn--primary btn--rounded"
                                     >Continue to checkout</a
                                 >
                             </div>
