--- a/favorite.html
+++ b/favorite.html
@@ -75,22 +75,22 @@
                     <div class="row gy-xl-3">
                         <div class="col-12">
                             <div class="page-container">
-                                <h1 class="cart-info__heading">Favorite List</h1>
-                                <p class="cart-info__desc">3 item</p>
+                                <h1 class="page-container__heading">Favorite List</h1>
+                                <p class="page-container__desc">3 item</p>
 
-                                <div class="cart-info__check-all">
-                                    <label class="cart-info__checkbox">
-                                        <input type="checkbox" name="address" class="cart-info__checkbox-input" />
+                                <div class="page-container__check-all">
+                                    <label class="page-container__checkbox">
+                                        <input type="checkbox" name="address" class="page-container__checkbox-input" />
                                     </label>
                                 </div>
-                                <div class="cart-info__list">
+                                <div class="page-container__list">
                                     <!-- item 1 -->
                                     <article class="cart-item">
-                                        <label class="cart-info__checkbox">
+                                        <label class="page-container__checkbox">
                                             <input
                                                 type="checkbox"
                                                 name="address"
-                                                class="cart-info__checkbox-input"
+                                                class="page-container__checkbox-input"
                                                 checked
                                             />
                                         </label>
@@ -172,8 +172,12 @@
                                     </article>
                                     <!-- item 2 -->
                                     <article class="cart-item">
-                                        <label class="cart-info__checkbox">
-                                            <input type="checkbox" name="address" class="cart-info__checkbox-input" />
+                                        <label class="page-container__checkbox">
+                                            <input
+                                                type="checkbox"
+                                                name="address"
+                                                class="page-container__checkbox-input"
+                                            />
                                         </label>
                                         <a href="#!">
                                             <img
@@ -253,11 +257,11 @@
                                     </article>
                                     <!-- item 3 -->
                                     <article class="cart-item">
-                                        <label class="cart-info__checkbox">
+                                        <label class="page-container__checkbox">
                                             <input
                                                 type="checkbox"
                                                 name="address"
-                                                class="cart-info__checkbox-input"
+                                                class="page-container__checkbox-input"
                                                 checked
                                             />
                                         </label>
@@ -340,14 +344,14 @@
                                     </article>
                                 </div>
 
-                                <div class="cart-info__bottom">
-                                    <div class="cart-info__row cart-info__row--block">
-                                        <div class="cart-info__continue">
-                                            <a href="./" class="cart-info__continue-link">
+                                <div class="page-container__bottom">
+                                    <div class="page-container__row page-container__row--block">
+                                        <div class="page-container__continue">
+                                            <a href="./" class="page-container__continue-link">
                                                 <img
                                                     src="./assets/icons/arrow-down2.svg"
                                                     alt=""
-                                                    class="cart-info__continue-icon icon"
+                                                    class="page-container__continue-icon icon"
                                                 />
                                                 Continue Shopping
                                             </a>
