--- a/payment.html
+++ b/payment.html
@@ -87,11 +87,11 @@
                     <div class="row gy-xl-3">
                         <div class="col-8 col-lg-12">
                             <div class="page-container">
-                                <div class="cart-info__top">
-                                    <h2 class="cart-info__heading cart-info__heading--lv2">
+                                <div class="page-container__top">
+                                    <h2 class="page-container__heading page-container__heading--lv2">
                                         1. Shipping, arrives between Mon, May 16—Tue, May 24
                                     </h2>
-                                    <a href="./shipping.html" class="cart-info__edit-btn">
+                                    <a href="./shipping.html" class="page-container__edit-btn">
                                         <img src="./assets/icons/edit.svg" alt="" class="icon" />
                                         Edit
                                     </a>
@@ -114,10 +114,10 @@
                                 </div>
                             </div>
                             <div class="page-container">
-                                <h2 class="cart-info__heading cart-info__heading--lv2">2. Shipping method</h2>
-                                <div class="cart-info__separate"></div>
+                                <h2 class="page-container__heading page-container__heading--lv2">2. Shipping method</h2>
+                                <div class="page-container__separate"></div>
 
-                                <h3 class="cart-info__sub-heading">Availeble Shipping method</h3>
+                                <h3 class="page-container__sub-heading">Availeble Shipping method</h3>
                                 <!-- payment item 3 -->
                                 <label>
                                     <div class="payment-item payment-item--pointer">
@@ -133,11 +133,11 @@
                                                     Delivery: 2-3 days work
                                                 </p>
                                             </div>
-                                            <span class="cart-info__checkbox payment-item__checkbox">
+                                            <span class="page-container__checkbox payment-item__checkbox">
                                                 <input
                                                     type="radio"
                                                     name="delivery-method"
-                                                    class="cart-info__checkbox-input payment-item__checkbox-input"
+                                                    class="page-container__checkbox-input payment-item__checkbox-input"
                                                 />
                                                 <span class="payment-item__cost">Free</span>
                                             </span>
@@ -159,11 +159,11 @@
                                                     Delivery: 2-3 days work
                                                 </p>
                                             </div>
-                                            <span class="cart-info__checkbox payment-item__checkbox">
+                                            <span class="page-container__checkbox payment-item__checkbox">
                                                 <input
                                                     type="radio"
                                                     name="delivery-method"
-                                                    class="cart-info__checkbox-input payment-item__checkbox-input"
+                                                    class="page-container__checkbox-input payment-item__checkbox-input"
                                                 />
                                                 <span class="payment-item__cost">$12.00</span>
                                             </span>
@@ -174,17 +174,17 @@
                         </div>
                         <div class="col-4 col-lg-12">
                             <div class="page-container">
-                                <h2 class="cart-info__heading cart-info__heading--lv2">Payment Details</h2>
-                                <p class="cart-info__desc">
+                                <h2 class="page-container__heading page-container__heading--lv2">Payment Details</h2>
+                                <p class="page-container__desc">
                                     Complete your purchase item by providing your payment details order.
                                 </p>
                                 <!-- form -->
-                                <form action="" class="form cart-info__form">
+                                <form action="" class="form page-container__form">
                                     <div class="form__group">
                                         <label for="email-address" class="form__label form__label--medium"
                                             >Email Address</label
                                         >
-                                        <div class="form__text-input cart-info__text-input">
+                                        <div class="form__text-input page-container__text-input">
                                             <input
                                                 type="text"
                                                 name="email-address"
@@ -202,7 +202,7 @@
                                         <label for="card-older" class="form__label form__label--medium"
                                             >Card Holder</label
                                         >
-                                        <div class="form__text-input cart-info__text-input">
+                                        <div class="form__text-input page-container__text-input">
                                             <input
                                                 type="text"
                                                 name="card-older"
@@ -220,7 +220,7 @@
                                         <label for="card-etails" class="form__label form__label--medium"
                                             >Card Details</label
                                         >
-                                        <div class="form__text-input cart-info__text-input">
+                                        <div class="form__text-input page-container__text-input">
                                             <input
                                                 type="text"
                                                 name="card-etails"
@@ -235,7 +235,7 @@
                                         <p class="form__error">Please enter Card Details</p>
                                     </div>
 
-                                    <div class="form__row cart-info__form-row">
+                                    <div class="form__row page-container__form-row">
                                         <div class="form__group">
                                             <div class="form__text-input">
                                                 <input
@@ -276,24 +276,24 @@
                                         </div>
                                     </div>
                                 </form>
-                                <div class="cart-info__row">
-                                    <span>Subtotal <span class="cart-info__sub-label">(items)</span></span>
+                                <div class="page-container__row">
+                                    <span>Subtotal <span class="page-container__sub-label">(items)</span></span>
                                     <span>3</span>
                                 </div>
-                                <div class="cart-info__row">
-                                    <span>Price<span class="cart-info__sub-label"> (Total)</span></span>
+                                <div class="page-container__row">
+                                    <span>Price<span class="page-container__sub-label"> (Total)</span></span>
                                     <span>$191.65</span>
                                 </div>
-                                <div class="cart-info__row">
+                                <div class="page-container__row">
                                     <span>Shipping</span>
                                     <span>$10.00</span>
                                 </div>
-                                <div class="cart-info__separate"></div>
-                                <div class="cart-info__row">
+                                <div class="page-container__separate"></div>
+                                <div class="page-container__row">
                                     <span>Estimated Total</span>
                                     <span>$201.65</span>
                                 </div>
-                                <a href="#!" class="btn cart-info__next-btn btn--primary">Pay $201.65</a>
+                                <a href="#!" class="btn page-container__next-btn btn--primary">Pay $201.65</a>
                             </div>
                         </div>
                     </div>
