--- a/shipping.html
+++ b/shipping.html
@@ -81,8 +81,10 @@
                     <div class="row gy-xl-3">
                         <div class="col-8 col-xl-12">
                             <div class="page-container">
-                                <h1 class="cart-info__heading">1. Shipping, arrives between Mon, May 16—Tue, May 24</h1>
-                                <div class="cart-info__separate"></div>
+                                <h1 class="page-container__heading">
+                                    1. Shipping, arrives between Mon, May 16—Tue, May 24
+                                </h1>
+                                <div class="page-container__separate"></div>
 
                                 <!-- user-address -->
                                 <div class="user-address">
@@ -110,11 +112,11 @@
                                         <article class="address-card">
                                             <div class="address-card__left">
                                                 <div class="address-card__choose">
-                                                    <label class="cart-info__checkbox">
+                                                    <label class="page-container__checkbox">
                                                         <input
                                                             type="radio"
                                                             name="address"
-                                                            class="cart-info__checkbox-input"
+                                                            class="page-container__checkbox-input"
                                                         />
                                                     </label>
                                                 </div>
@@ -132,7 +134,7 @@
                                             <div class="address-card__right">
                                                 <div class="address-card__ctrl">
                                                     <button
-                                                        class="cart-info__edit-btn js-toggle"
+                                                        class="page-container__edit-btn js-toggle"
                                                         toggle-target="#add-new-address"
                                                     >
                                                         <img src="./assets/icons/edit.svg" alt="" class="icon" />
@@ -145,11 +147,11 @@
                                         <article class="address-card">
                                             <div class="address-card__left">
                                                 <div class="address-card__choose">
-                                                    <label class="cart-info__checkbox">
+                                                    <label class="page-container__checkbox">
                                                         <input
                                                             type="radio"
                                                             name="address"
-                                                            class="cart-info__checkbox-input"
+                                                            class="page-container__checkbox-input"
                                                         />
                                                     </label>
                                                 </div>
@@ -168,7 +170,7 @@
                                             <div class="address-card__right">
                                                 <div class="address-card__ctrl">
                                                     <button
-                                                        class="cart-info__edit-btn js-toggle"
+                                                        class="page-container__edit-btn js-toggle"
                                                         toggle-target="#add-new-address"
                                                     >
                                                         <img src="./assets/icons/edit.svg" alt="" class="icon" />
@@ -179,10 +181,10 @@
                                         </article>
                                     </div>
                                 </div>
-                                <div class="cart-info__separate"></div>
+                                <div class="page-container__separate"></div>
 
-                                <h2 class="cart-info__sub-heading">Items details</h2>
-                                <div class="cart-info__list">
+                                <h2 class="page-container__sub-heading">Items details</h2>
+                                <div class="page-container__list">
                                     <!-- item 1 -->
                                     <article class="cart-item">
                                         <a href="#!">
@@ -402,31 +404,31 @@
                                     </article>
                                 </div>
 
-                                <div class="cart-info__bottom d-md-none">
+                                <div class="page-container__bottom d-md-none">
                                     <div class="row">
                                         <div class="col-8 col-xxl-7">
-                                            <div class="cart-info__continue">
-                                                <a href="./" class="cart-info__continue-link">
+                                            <div class="page-container__continue">
+                                                <a href="./" class="page-container__continue-link">
                                                     <img
                                                         src="./assets/icons/arrow-down2.svg"
                                                         alt=""
-                                                        class="cart-info__continue-icon"
+                                                        class="page-container__continue-icon"
                                                     />
                                                     Continue Shopping
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col-4 col-xxl-5">
-                                            <div class="cart-info__row">
+                                            <div class="page-container__row">
                                                 <span>Subtotal:</span>
                                                 <span>$191.65</span>
                                             </div>
-                                            <div class="cart-info__row">
+                                            <div class="page-container__row">
                                                 <span>Shipping:</span>
                                                 <span>$10.00</span>
                                             </div>
-                                            <div class="cart-info__separate"></div>
-                                            <div class="cart-info__row cart-info__row--bold">
+                                            <div class="page-container__separate"></div>
+                                            <div class="page-container__row page-container__row--bold">
                                                 <span>Total:</span>
                                                 <span>$201.65</span>
                                             </div>
@@ -437,24 +439,24 @@
                         </div>
                         <div class="col-4 col-xl-12">
                             <div class="page-container">
-                                <div class="cart-info__row">
-                                    <span>Subtotal <span class="cart-info__sub-label">(items)</span></span>
+                                <div class="page-container__row">
+                                    <span>Subtotal <span class="page-container__sub-label">(items)</span></span>
                                     <span>3</span>
                                 </div>
-                                <div class="cart-info__row">
-                                    <span>Price<span class="cart-info__sub-label"> (Total)</span></span>
+                                <div class="page-container__row">
+                                    <span>Price<span class="page-container__sub-label"> (Total)</span></span>
                                     <span>$191.65</span>
                                 </div>
-                                <div class="cart-info__row">
+                                <div class="page-container__row">
                                     <span>Shipping</span>
                                     <span>$10.00</span>
                                 </div>
-                                <div class="cart-info__separate"></div>
-                                <div class="cart-info__row">
+                                <div class="page-container__separate"></div>
+                                <div class="page-container__row">
                                     <span>Estimated Total</span>
                                     <span>$201.65</span>
                                 </div>
-                                <a href="./payment.html" class="btn cart-info__next-btn btn--primary btn--rounded"
+                                <a href="./payment.html" class="btn page-container__next-btn btn--primary btn--rounded"
                                     >Continue to checkout</a
                                 >
                             </div>
